<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>burp.vaycore</groupId>
    <artifactId>onescan</artifactId>
    <packaging>pom</packaging>
    <version>parent</version>

    <modules>
        <module>montoya-api</module>
        <module>burp-extender-api</module>
        <module>extender</module>
    </modules>

    <properties>
        <jdk.version>1.8</jdk.version>
        <java.version>${jdk.version}</java.version>
        <maven.compiler.source>${jdk.version}</maven.compiler.source>
        <maven.compiler.target>${jdk.version}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <burp-extender-api.version>2.3</burp-extender-api.version>
        <montoya-api.version>2023.12.1</montoya-api.version>
        <gson.version>2.10.1</gson.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.portswigger.burp.extender</groupId>
                <artifactId>burp-extender-api</artifactId>
                <version>${burp-extender-api.version}</version>
            </dependency>
            <dependency>
                <groupId>net.portswigger.burp.extensions</groupId>
                <artifactId>montoya-api</artifactId>
                <version>${montoya-api.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>${gson.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>


</project>